<resources>
    <string name="app_name">Delaware</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shipment_verzenderText">-</string>
    <string name="shipment_beschrijvingText">-</string>
    <string name="shipment_afleveradresText">-</string>
    <string name="shipment_infoVerzender">Verzender:</string>
    <string name="shipment_infoBeschrijving">Beschrijving:</string>
    <string name="shipment_infoAfleveradres">Afleveradres:</string>
    <string name="shipment_infoTybeBox">Type box:</string>
    <string name="shipment_header">Verzenden</string>
    <string name="shipment_buttonText">Plaats bestelling</string>
    <string name="mijn_bestellingen">Mijn Bestellingen</string>
    <string name="order_nr">Bestelling Nr…</string>
    <string name="producten">Producten</string>
    <string name="adres">Adresgegevens</string>
    <string name="datum">Datum</string>
    <string name="orderStatus">Status</string>
    <string name="order_nr_zonder...">Bestel Nr</string>
    <string name="datum_vb">02/14/2022</string>
    <string name="referentie_vb">PIX</string>
    <string name="order_nr_vb">B11422-d55162</string>
    <string name="icon_arrow">icon arrow</string>
    <string name="search_logo">search logo</string>
    <string name="bekijkwinkelwagen">Verder met bestellen</string>
    <string name="cart">Winkelwagen</string>
    <string name="bestelproducten">Bestel producten</string>
    <string name="formaat">Formaat (in cm):</string>
    <string name="hoogte">Hoogte</string>
    <string name="ProductName">Productnaam</string>
    <string name="ProductPriceSign">€</string>
    <string name="ProductPrice">prijs</string>
    <string name="ProductDescription">Beschrijving</string>
    <string name="defComponent">x</string>
    <string name="bestellingGeplaatst">Bestelling\ngeplaatst</string>
    <string name="bestellingVerwerkt">Bestelling\nverwerkt</string>
    <string name="bestellingVerzonden">Bestelling\nverzonden</string>
    <string name="bestellingGeleverd">Bestelling\ngeleverd</string>
    <string name="geen_meldingen">Nog geen meldingen</string>
    <string name="delete_notification_description">Delete notification</string>
    <string name="image_notification_description">Image notification</string>
    <string name="order_created_notification_text">Uw bestelling werd succesvol aagemaakt</string>
    <string name="order_proccessed_notification_text">Uw pakket wordt bezorgd op %s om %s</string>
    <string name="order_shipped_notification_text">De bezorger is onderweg!</string>
    <string name="order_delivered_notification_text">Uw bestelling is afgeleverd!</string>
    <string name="alle">Alle</string>
    <string name="Nieuw">nieuw</string>
    <string name="track_amp_trace"><![CDATA[Track & Trace]]></string>
    <string name="image_orderDetail_description">Image order detail</string>
    <string name="image_orderDetailDelivered_description">Image order detail delivered</string>
    <string name="order_nr_titel">Bestelling Nr. %s</string>
    <string name="ETA">ETA : 18/06 18:00 – 20:00</string>
    <string name="orderDetail_info">Verzender: Bol.com \nReferentieNr: 025858 \nBeschrijving: Kleren</string>
    <string name="product_image">Product image</string>
    <string name="track_and_trace">Track And Trace</string>
    <string name="overzicht">Overzicht</string>
    <string name="logs">Logs</string>
    <string name="track_order">Track Order</string>
    <string name="homeBottomNavigation">Home</string>
    <string name="notificatiesBottomNavigation">Notificaties</string>
    <string name="winkelwagenBottomNavigation">Winkelwagen</string>
    <string name="notification_message">Bestelling %s: %s</string>
    <string name="Google_Maps">Google Maps</string>
    <string name="sort_arrow">sort arrow</string>
    <string-array name="shipment_boxTypeValues">
        <item>Standaard (Goedkoper)</item>
        <item>Aangepast (Duurder)</item>
    </string-array>
</resources>